# symptoms-analyser

./: .coverage  .gitignore  CLAUDE.md  Makefile  README.md  app.py  cost_estimation.md  generate_from_scratch.py  generate_synthetic.py  migration_checklist.md  plan.md  preprocess.py  pyproject.toml  tdpm_analyse_llm.py  tdpm_analysis.py  utils.py  viewer.py
data/: speaking_style_reference.txt  sqlite.db  tdpm_ontology.json
docs/: cost_estimation.md  db_architecture.md  db_schema_plan.md  decoupling_analysis.md  design_system.md  interventions.md  node_plus_react_migration_guide.md  plan.md  postgres_migration_guide.md  research_papers.md  source_code_layout.md  sqlite_migration_guide.md  sqlite_to_postgres_transition.md  subgroups_identification.md  suggested_interventions.md  tcc_recommendations.md  transcript_analysis_pipeline.md  transcript_analysis_pipeline_decoupling_analysis.md
prompts/: clinical_analysis.md  clinical_synthesis.md  preprocess.md  sanitization.md  synthetic_from_scratch.md  synthetic_generation.md  tdpm_analysis.md  tdpm_evaluation.md
scripts/: backfill_clinical_analyses.py  backfill_syntheses.py  clean_db.py  comparar_eval.py  migrate_clinical_analysis_rename.py  migrate_files_to_db.py  migrate_groups.py  migrate_sqlite_to_pg.py  preprocess.py  run_llm_analysis.py  setup_db.py  tdpm_analysis.py  validacao_tdpm.py
static/: prices.csv
templates/: base.html  index.html  upload.html  viewer_analysis.html  viewer_compare.html  viewer_evolution.html
tests/: test_app.py  test_cohort_analytics.py  test_connection.py  test_controllers.py  test_evaluations.py  test_html_pages.py  test_interventions.py  test_llm_analysis.py  test_orchestrator.py  test_orm_direct.py  test_patient_update.py  test_preprocessing.py  test_risk_alerts.py  test_sanitization.py  test_tdpm_analysis.py  test_tdpm_evaluation.py  (+4 more)
(+79 files in other folders)
