[project]
name = "symptoms-analyser"
version = "0.1.0"
description = "AI-based TDPM-20 symptom analysis on group therapy session transcripts"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
preprocess = "preprocess:main"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["preprocess"]

[dependency-groups]
dev = [
