[project]
name = "symptoms-analyser"
version = "0.1.0"
description = "AI-based TDPM-20 symptom analysis on group therapy session transcripts"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "pytest>=9.0.3",
]
stats = [
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
]

